--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_TIMEZONE=Europe/Paris
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=PostgreSQL
+DB_CONNECTION=pgsql
 DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=electronic_catalog
